// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sx3pios {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sx3pios:focus,
.sx3pios:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sx3pios:active {
  color: var(--sx-colors-primary);
}

.sx9h9si > .sx3pios,
.sx53fkz > .sx3pios,
.sx03kze > .sx3pios {
  font-size: 100%;
  line-height: 1;
}

.sx9h9si > .sx3pios::before,
.sx9h9si > .sx3pios::after,
.sx53fkz > .sx3pios::before,
.sx53fkz > .sx3pios::after,
.sx03kze > .sx3pios::before,
.sx03kze > .sx3pios::after {
  content: none;
}

.sx3piosryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sx3piosryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sx3piosryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sx3pios sx3piosryo8u--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sx3pios {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sx3pios:focus,
.sx3pios:hover {
  color: var(--sx-colors-tertiary);
  text-decoration: underline;
}

.sx3pios:active {
  color: var(--sx-colors-primary);
}

.sx9h9si > .sx3pios,
.sx53fkz > .sx3pios,
.sx03kze > .sx3pios {
  font-size: 100%;
  line-height: 1;
}

.sx9h9si > .sx3pios::before,
.sx9h9si > .sx3pios::after,
.sx53fkz > .sx3pios::before,
.sx53fkz > .sx3pios::after,
.sx03kze > .sx3pios::before,
.sx03kze > .sx3pios::after {
  content: none;
}

.sx3piosryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sx3piosryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sx3piosryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sx3piosg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sx3piosg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sx3piosg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sx3pios sx3piosg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
